--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,11 @@
                 "glob": "**/*",
                 "input": "./node_modules/monaco-editor/min/vs",
                 "output": "libs/vs"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/@covalent/code-editor/assets/monaco",
+                "output": "/assets/monaco"
               }
             ],
             "styles": [
