--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@covalent/code-editor": "^2.0.0-beta.5",
     "@covalent/core": "^2.0.0-beta.2",
     "@covalent/dynamic-forms": "^2.0.0-beta.2",
     "@covalent/highlight": "^2.0.0-beta.2",
