--- a/package.json
+++ b/package.json
@@ -13,60 +13,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@covalent/code-editor": "^2.0.0-beta.5",
-    "@covalent/core": "^2.0.0-beta.2",
-    "@covalent/dynamic-forms": "^2.0.0-beta.2",
-    "@covalent/highlight": "^2.0.0-beta.2",
-    "@covalent/http": "^2.0.0-beta.2",
-    "@covalent/markdown": "^2.0.0-beta.2",
-    "@reactive-redux/store": "^1.0.40",
-    "apollo-angular": "^1.3.0",
-    "apollo-angular-link-http": "^1.2.0",
-    "apollo-cache-inmemory": "^1.2.0",
-    "apollo-client": "^2.4.0",
+    "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/material": "^7.3.3",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
+    "@angular/router": "^7.2.7",
+    "@covalent/code-editor": "^2.0.4",
+    "@covalent/core": "^2.0.1",
+    "@covalent/dynamic-forms": "^2.0.1",
+    "@covalent/highlight": "^2.0.1",
+    "@covalent/http": "^2.0.1",
+    "@covalent/markdown": "^2.0.1",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.5.0",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
     "apollo-codegen": "^0.20.2",
-    "apollo-link": "^1.2.0",
-    "apollo-link-ws": "^1.0.9",
-    "core-js": "^2.5.4",
-    "graphql": "^0.13.2",
+    "apollo-link": "^1.2.8",
+    "apollo-link-ws": "^1.0.14",
+    "core-js": "^2.6.5",
+    "graphql": "^14.1.1",
     "graphql-tag": "^2.9.2",
-    "monaco-editor": "^0.14.3",
+    "monaco-editor": "^0.15.6",
     "ngx-monaco": "^0.8.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.4.0",
     "subscriptions-transport-ws": "^0.9.15",
-    "zone.js": "~0.8.26"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.3",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "~7.3.4",
+    "@angular/compiler-cli": "^7.2.7",
+    "@angular/language-service": "^7.2.7",
     "@types/graphql": "^14.0.7",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.9",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.10.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.0.2",
+    "tslint": "~5.13.1",
+    "typescript": "~3.3.3333"
   }
 }
