--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rxdi/deploy-webui",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -46,7 +46,7 @@
     "graphql-tag": "^2.9.2",
     "monaco-editor": "^0.15.6",
     "ngx-monaco": "^0.8.0",
-    "rxjs": "^6.4.0",
+    "rxjs": "6.5.1",
     "subscriptions-transport-ws": "^0.9.15",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
